src/pages/index.sass
@import "../styles/bulma/utilities/_all"
@import "../styles/shortcuts"
@import "../styles/_buttons"


.home-page

  // HERO

  .page-title 
    padding-top: 0

  .hero-section 
    // background: url(../resources/hero-bg.png) no-repeat
    // background-size: contain
    // background-position: center center
    width: 100%
    height: 80vh
    position: relative
    padding: 0

    .hero-bg
      position: absolute
      display: flex
      justify-content: space-between
      width: 100vw
    
    .hero-left, .hero-right
      height: 80vh
      width: 20vw

    .hero-left
      transform: translateX(-32px)

    .hero-right
      transform: translateX(32px)

    .title-container
      height: 100%
      margin: auto
      position: relative
      top: 25%

    @media (min-width: 1800px)

      .page-title
        font-size: 4vw
        width: 40vw
        margin-bottom: 20px
    
      .page-subtitle 
        font-size: 1.2vw
        width: 45vw

    @media (min-width: 1400px)

      .title-container
        top: 10vw

  // SYNTHS

  .synth-section
    margin-top: 200px

    .synth-categories 
      display: flex
      justify-content: center

    .synth-type
      background-color: #1E1A31
      box-shadow: 0 10px 20px 0 rgba(9,8,24,0.64)
      border-radius: 5px
      width: 180px
      height: 240px
      margin: 16px
      padding: 24px
      text-align: center
      // transition: 200ms all ease

      // &:hover
      //   transform: translateY(-4px)
      //   box-shadow: 0 5px 5px 0 rgba(64,43,220,0.09)

    .synth-img 
      height: 80px
      width: 80px
      margin: 24px auto 40px auto

    .synth-p2 
      color: #ffffff
      font-weight: 500
      font-size: 16px
      text-transform: uppercase
      letter-spacing: 0.5px

    .view-synths-button
      margin: 16px auto 0 auto
      @extend .purple-button

  // EXCHANGE

  .exchange-section
    background: url(../resources/graph.png) no-repeat
    background-size: cover
    background-position: top
    height: auto
    width: 100%
    padding-top: 480px

    .section-desc
      letter-spacing: 1px

    .exchange-logo
      margin-top: 40px
      width: 60vw
      max-width: 640px

    .exchange-columns
      max-width: 1130px
      margin: 0 auto 100px auto

      .column
        width: 320px
        text-align: center

        .p1
          color: #D1D1E8
          letter-spacing: 0.2px
          font-weight: 400
          text-align: center
          margin: 20px auto 0 auto
          font-size: 20px

        +mobile
          width: auto

    .section-image 
      width: 80%
      max-width: 1400px
      margin: 32px auto 64px auto

    .icon-img 
      height: 80px
      margin: 40px auto


    .centered
      margin: 0 auto

    .purple-button
      width: 320px
      height: 62px

      margin-top: 50px
      margin-bottom: 30px
  
  .background-gradient
    // background-color: #1E1A31
    // background-image: linear-gradient(to bottom right, rgba(30, 26, 49, 0), rgba(15, 14, 37, 1))
    // background-image: linear-gradient(to bottom right, #1E1A31, #0F0E25)

  // LEARN MORE

  .learn-section
    display: flex
    max-width: 1300px
    margin: 16vh auto

    .section-title
      text-align: left
      max-width: 320px
      color: #FFFFFF

    .learn-columns
      margin-right: auto

    .learn-litepaper
      // transform: translateY(-24px)
      // transition: 200ms all ease

    .learn-community
      // transform: translateY(24px)

    .column
      background-color: #1E1A31
      background-image: linear-gradient(to bottom right, #1E1A31, #0F0E25)
      box-shadow: 0 10px 20px 0 rgba(9,8,24,0.64)
      border-radius: 5px
      width: 320px
      height: 420px
      margin: 24px
      padding: 24px
      text-align: center
      transition: 200ms all ease

      &:hover
        transform: translateY(-4px)
        box-shadow: 0 10px 20px 0 rgba(9,8,24,0.80)

      .icon-img
        margin: 40px auto

      .p1
        font-size: 32px
        font-weight: 500
        color: #fff
        text-transform: uppercase
        letter-spacing: 0
        text-align: center
        line-height: 26px
        max-width: 200px
        margin: 40px auto 48px auto

      .purple-button 
        width: 80%
        transform: none

  @media (max-width: 1200px)
    .learn-section
      display: block
      margin: 48px auto


      .column
        max-width: 320px
        margin: 24px

      .section-title
        max-width: unset
        font-size: 36.54px !important
        text-align: center
        margin-bottom: 24px

  // .product-section
  //     background-color: #0F0E25
  //     background-image: linear-gradient(#0F0E25, #1E1A31)

  // PRODUCTS

  .product-section
    margin: 16vh auto

  .product-boxes
    .product-column
      cursor: pointer
      width: 290px
      height: auto
      position: relative
      text-align: center
      border-radius: 4px
      background-color: #1E1A31
      background-image: linear-gradient(to bottom right, #1E1A31, #0F0E25)
      box-shadow: 0 10px 20px 0 rgba(9,8,24,0.64)
      margin: 24px
      display: flex
      flex-direction: column
      transition: 200ms all ease

      &:hover
        transform: translateY(-4px)
        box-shadow: 0 10px 20px 0 rgba(9,8,24,0.80)

      .c-top 
        color: #D1D1E8
        padding: 32px 0 0 0
        font-size: 24px

      .c-mid
        flex-grow: 0
        padding: 32px 24px 64px 24px 

        img
          max-width: 140px

        +tablet
          padding-bottom: 10px

      .c-bottom
        flex-grow: 0
        margin-top: 32px
        margin-bottom: 48px
      .p1
        float: right
        font-size: 24px
        text-align: right
        line-height: 24px
      .p2
        font-size: 32px
        font-weight: 500
        line-height: 26px
        padding-bottom: 16px
        color: #FFFFFF
      .p3
        font-size: 20px
        color: #9492C4
        max-width: 222px
        margin: auto
        +widescreen
          line-height: 31px
        +tablet
          font-size: 20px
      .beta-badge
          font-size: 28.79px
          color: #4A4762
          text-align: left
          font-family: 'apercu'
          position: absolute
          left: 132px
          top: 56px
    
  @media (max-width: 1300px)

    .product-section
      margin: 48px auto

    .section-title
      font-size: 36.54px

  .page-title
    +desktop
      padding-top: 20px
    +touch
      width: 80%

    .title-logo
      width: 100%
      max-height: 63px

  .page-subtitle
    color: #6F6E98
    letter-spacing: -0.75px
    text-align: center
    @include font-size(26)
    +tablet
      width: 850px

  .main-buttons
    .main-button
      padding: 20px 40px
      font-size: 22px
      display: flex
      justify-content: center
      align-items: center
      min-width: 218px
      img.is-icon
        position: relative
        display: inline
        padding-right: 20px

  .subscribe-section
    background-color: #1E1A31
    color: #000
    font-size: 36px
    font-weight: 500
    letter-spacing: -0.42px
    text-align: center

    .sub-title
      color: #FFF

    .mailing-list
      margin: auto
      display: flex
      width: 100%

    .sub-inputs
      display: flex
      width: 60vw
      max-width: 1100px
      align-items: center
      margin: auto
      justify-content: space-around

    .input-field
      width: 64%
      margin-left: 24px

    .subscribe-button 
      border: none
      font-size: 16px
      letter-spacing: 0.5px
      cursor: pointer

  +desktop
    .get-rewarded-boxes .column, .feature-boxes .column
      flex: none

  +touch
    .get-rewarded-boxes .column, .feature-boxes .column, .feature-boxes .column .p2
      width: auto

